--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -124,7 +124,7 @@
 }
 
 .bx-wrapper .bx-next:hover {
-	background-position: -43px 0;
+	/* background-position: -43px 0; */
 }
 
 .bx-wrapper .bx-controls-direction a {
